--- a/sample/mysite/templates/index.html
+++ b/sample/mysite/templates/index.html
@@ -466,8 +466,9 @@
         <!-- jQuery CDN -->
          <!-- <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script> -->
          <!-- Bootstrap Js CDN -->
-         <script src="{%static 'js/jQuery-min.js' %}"></script>
-         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+         <script src="{% static 'js/jQuery-min.js' %}"></script>
+         <script src="{% static 'js/bootstrap.js' %}"></script>
+         <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
 
          <script type="text/javascript">
              $(document).ready(function () 
